--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "name": "yarn-or-npm",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "description": "Use Yarn or npm to execute a command",
-  "files": [
-    "index.js",
-    "bin/"
+  "license": "MIT",
+  "engines": {
+    "node": ">=8.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:camacho/yarn-or-npm.git"
+  },
+  "author": "Patrick Camacho <patrick@daftdevelopers.com>",
+  "keywords": [
+    "yarn",
+    "npm",
+    "spawn",
+    "command"
   ],
   "bin": {
     "yarn-or-npm": "bin/index.js",
     "yon": "bin/index.js"
   },
   "main": "index.js",
-  "engines": {
-    "node": ">=0.12"
-  },
-  "repository": {
-    "url": "git@github.com:camacho/yarn-or-npm.git",
-    "type": "git"
-  },
-  "author": "Patrick Camacho <patrick@daftdevelopers.com>",
-  "license": "MIT",
+  "files": [
+    "index.js",
+    "bin/"
+  ],
   "dependencies": {
-    "cross-spawn": "^5.0.0"
+    "cross-spawn": "^6.0.5",
+    "pkg-dir": "^4.2.0"
   }
 }
